Lots of changes and improvements. Dropbox support.